--- a/app/src/main/res/layout/activity_tela_de_morte.xml
+++ b/app/src/main/res/layout/activity_tela_de_morte.xml
@@ -5,9 +5,11 @@
     android:theme="@android:style/Theme.Dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TelaDeMorteActivity">
+    tools:context=".TelaDeMorteActivity"
+    android:background="@drawable/background_main">
 
-    <TextView
+
+<TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
