--- a/app/src/main/res/drawable/edit_text_border.xml
+++ b/app/src/main/res/drawable/edit_text_border.xml
@@ -7,4 +7,7 @@
     <stroke
         android:color="#ffffff"
         android:width="2dp"/>
+    <corners
+        android:radius="20dp"/>
+
 </shape>
