--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape"
+            android:background="@drawable/shape2"
             android:orientation="vertical"
             android:padding="10dp"
             android:layout_gravity="center"
@@ -40,24 +40,28 @@
                 android:paddingTop="15dp"
                 android:text="ABYSS PIRAMID"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/WhiteSmoke"
                 android:textSize="40sp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_margin="7dp"
+                android:background="@color/WhiteSmoke" />
 
             <EditText
                 android:id="@+id/usernameTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:fontFamily="@font/yatra"
-                android:hint="Nome de Usuario"
+                android:hint="Username"
                 android:inputType="textPersonName"
                 android:padding="5dp"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/WhiteSmoke"
                 android:textColorHint="@color/Gray"
                 android:textSize="20sp" />
 
@@ -65,17 +69,16 @@
                 android:id="@+id/passwordTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:fontFamily="@font/yatra"
-                android:hint="Senha"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:padding="5dp"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/WhiteSmoke"
                 android:textColorHint="@color/Gray"
                 android:textSize="20sp" />
 
@@ -84,25 +87,23 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="50dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/yatra"
                 android:text="Login"
-                android:textColor="@color/white"
+                android:textColor="@color/WhiteSmoke"
                 android:textSize="20sp"
-                app:cornerRadius="0dp"
-                app:strokeColor="@color/white"
+                app:cornerRadius="20dp"
+                app:strokeColor="@color/WhiteSmoke"
                 app:strokeWidth="2dp" />
 
             <TextView
                 android:id="@+id/cadastroTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cadastro"
+                android:text="Signup"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/WhiteSmoke"
                 android:fontFamily="@font/yatra"/>
 
         </LinearLayout>
