--- a/app/src/main/res/layout/activity_tela_de_vitoria.xml
+++ b/app/src/main/res/layout/activity_tela_de_vitoria.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:theme="@android:style/Theme.Dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TelaDeMorteActivity"
+    tools:context=".TelaDeVitoriaActivity"
     android:background="@drawable/background_main">
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -25,10 +24,22 @@
             android:layout_marginBottom="-10dp"
             android:fontFamily="@font/yatra"
             android:paddingTop="15dp"
-            android:text="GAME OVER"
+            android:text="Score"
             android:textAlignment="center"
             android:textColor="@color/WhiteSmoke"
-            android:textSize="60sp" />
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/scoreTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-10dp"
+            android:fontFamily="@font/yatra"
+            android:paddingTop="15dp"
+            android:text="999"
+            android:textAlignment="center"
+            android:textColor="@color/WhiteSmoke"
+            android:textSize="20sp"
+            android:paddingBottom="20dp"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
@@ -65,7 +76,7 @@
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/yatra"
-                android:text="Restart"
+                android:text="Play Again"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/WhiteSmoke"
                 android:textSize="20sp"
@@ -91,6 +102,5 @@
 
         </LinearLayout>
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
